# GameOfLife

./: CMakeLists.txt  cmaker.sh  sonar-project.properties
.cache/clangd/index/: glad.c.21CEBBFC17D0FBDA.idx  glad.c.47EC74D44C04E3C1.idx  glad.h.626569F513ADC8FE.idx  glad.h.A1DF71B7892A96C9.idx  khrplatform.h.3421AF18DB6DF00E.idx  khrplatform.h.988E598E94F684E1.idx  main.cpp.C9D1DBBF0E1EE300.idx  main.cpp.F5C430810641D71F.idx  shaders.cpp.C74D0E95260E9C47.idx  shaders.cpp.D3FDFA9907554042.idx  shaders.hpp.1C6704920FC0CF49.idx  shaders.hpp.51FCA821678B06A7.idx  shadersSources.hpp.6FD5DA061941A818.idx
.github/workflows/: build.yml
include/: shaders.hpp  shadersSources.hpp
include/glad/: glad.h
include/shaders/: computeFragment.hpp  computeVertex.hpp  renderFragment.hpp
src/: glad.c  main.cpp  old.cpp  shaders.cpp  ù
src/shaders/: compute.frag  compute.vert  render.frag
